# lernning_file

c++life/: life.cpp
cmake_lern/: CMakeLists.txt  cmake_lern.cpp
cmake_lern/include/: swap.h
cmake_lern/src/: CMakeLists.txt  swap.cpp
fork_test/: CMakeLists.txt  fork.cpp
functor/: functor.cpp
getopt/: getopt  getopt.cpp
lamda_expresssion/: lamda.cpp
template_and_array/: array.cpp
tmptest/: test.cpp
